moonlight-rewrite/test/fixtures/CompileFail/MatchRecordUpdate.hs
module MatchRecordUpdate where

import Moonlight.Rewrite.Relational.Front (Match, matchRevision)

forgeMatch :: Match -> Match
forgeMatch matchValue =
  matchValue {matchRevision = matchRevision matchValue}
